ブロック仕様修正
